--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -32,6 +32,8 @@ thiserror = { version = "1.0.30", default-features = false }
 time-helper = { version = "0.1.0", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "sync", "fs" ], optional = true }
 tokio-stream = { version = "0.1.7", default-features = false, optional = true }
+trace-tools = { version = "0.3.0", default-features = false, optional = true }
+tracing = { version = "0.1.29", default-features = false, optional = true }
 url = { version = "2.2.2", default-features = false, optional = true }
 
 [features]
@@ -54,3 +56,4 @@ workers = [
   "tokio-stream",
   "url/serde"
 ]
+trace = [ "bee-common/trace", "bee-tangle/trace", "trace-tools/tokio-console", "tracing" ]
