--- a/bee-storage/bee-storage-rocksdb/Cargo.toml
+++ b/bee-storage/bee-storage-rocksdb/Cargo.toml
@@ -18,6 +18,7 @@ bee-storage = { version = "0.9.0", path = "../bee-storage", default-features = f
 bee-tangle = { version = "0.2.0", path = "../../bee-tangle", default-features = false }
 
 num_cpus = { version = "1.13.0", default-features = false }
+parking_lot = { version = "0.12.0", default-features = false }
 rocksdb = { version = "0.17.0", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 thiserror = { version = "1.0.30", default-features = false }
