Update config templates

--- a/bee-node/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/bee-node/config.chrysalis-devnet.toml
@@ -86,9 +86,16 @@ full        = "http://dbfiles.chrysalis-devnet.iota.cafe/snapshots/hornet/latest
 delta       = "http://dbfiles.chrysalis-devnet.iota.cafe/snapshots/hornet/latest-delta_snapshot.bin"
 
 [pruning]
-enabled         = true
-delay           = 60480
-prune_receipts  = false
+[pruning.milestones]
+enabled                = true
+max_milestones_to_keep = 60480
+[pruning.receipts]
+enabled                = false
+[pruning.size]
+enabled                = true
+target_size            = 30GB
+threshold_percentage   = 10.0
+cooldown_time          = 5m
 
 [storage]
 path = "./storage/devnet/tangle"
