--- a/bee-node/bee-node/config.chrysalis-mainnet.toml
+++ b/bee-node/bee-node/config.chrysalis-mainnet.toml
@@ -124,7 +124,7 @@ enabled                = true
 max_milestones_to_keep = 60480
 [pruning.receipts]
 enabled                = false
-[pruning.size]
+[pruning.by_size]
 enabled                = true
 target_size            = 30GB
 threshold_percentage   = 10.0
