--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "tangle", "bee", "framework", "node" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-autopeering = { version = "0.5.0", path = "../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb" ] }
+bee-autopeering = { version = "0.5.0", path = "../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb1" ] }
 bee-common = { version = "0.6.0", path = "../bee-common/bee-common", default-features = false }
 bee-gossip = { version = "0.6.0", path = "../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
 bee-ledger = { version = "0.6.1", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
