Removed unused config params
Co-Authored-By: Thoralf-M <46689931+Thoralf-M@users.noreply.github.com>

--- a/bee-node/config.chrysalis-comnet.json
+++ b/bee-node/config.chrysalis-comnet.json
@@ -112,8 +112,7 @@
     "path": "./storage/comnet/tangle"
   },
   "tangle": {
-    "belowMaxDepth": 15,
-    "numPartitions": 16
+    "belowMaxDepth": 15
   },
   "mqtt": {
     "address": "tcp://localhost:1883"
