--- a/bee-node/config.chrysalis-devnet.json
+++ b/bee-node/config.chrysalis-devnet.json
@@ -110,8 +110,7 @@
     "path": "./storage/devnet/tangle"
   },
   "tangle": {
-    "belowMaxDepth": 15,
-    "numPartitions": 16
+    "belowMaxDepth": 15
   },
   "mqtt": {
     "address": "tcp://localhost:1883"
