--- a/bee-node/config.chrysalis-mainnet.json
+++ b/bee-node/config.chrysalis-mainnet.json
@@ -139,8 +139,7 @@
     "path": "./storage/mainnet/tangle"
   },
   "tangle": {
-    "belowMaxDepth": 15,
-    "numPartitions": 16
+    "belowMaxDepth": 15
   },
   "mqtt": {
     "address": "tcp://localhost:1883"
