--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -26,10 +26,10 @@ bytemuck = { version = "1.8.0", default-features = false }
 derive_more = { version = "0.99.16", default-features = false, features = [ "from", "as_ref", "deref" ] }
 digest = { version = "0.9.0", default-features = false }
 hashbrown = { version = "0.12.0", default-features = false, features = [ "ahash", "inline-more" ] }
-hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
 packable = { version = "0.2.1", default-features = false, features = [ "serde", "primitive-types" ] }
+prefix-hex = { version = "0.2.0", default-features = false, features = [ "primitive-types1" ] }
 primitive-types = { version = "0.10.1", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.130", default-features = false, optional = true }
 serde-big-array = { version = "0.3.2", default-features = false, features = [ "const-generics" ], optional = true }
