--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,9 +1,11 @@
 version = "Two"
 comment_width = 120
+edition = "2021"
 format_code_in_doc_comments = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
 license_template_path = ".license_template"
 max_width = 120
-imports_granularity = "Crate"
 normalize_comments = true
 normalize_doc_attributes = true
 wrap_comments = true
