--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -42,6 +42,7 @@ log = { version = "0.4.14", default-features = false }
 multiaddr = { version = "0.13.0", default-features = false }
 packable = { version = "0.2.1", default-features = false, features = [ "io" ] }
 pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
+prost = { version = "0.8.0", default-features = false }
 rand = { version = "0.8.4", default-features = false }
 rpassword = { version = "5.0.1", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
@@ -51,9 +52,12 @@ thiserror = { version = "1.0.30", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
 tokio-stream = { version = "0.1.7", default-features = false }
 toml = { version = "0.5.8", default-features = false }
+tonic = { version = "0.5.2", default-features = false, features = [ "codegen", "prost", "transport" ] }
 tracing = { version = "0.1.29", default-features = false, optional = true }
 warp = { version = "0.3.1", default-features = false }
 
+[build-dependencies]
+tonic-build = { version = "0.5.2", default-features = false, features = [ "transport", "prost" ]}
 [lib]
 name = "bee_node"
 path = "src/lib.rs"
