--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,9 +3,9 @@ name: Coverage
 on:
   push:
     branches:
-      - mainnet
+      - production
       - 'mainnet-develop*'
-      - shimmer
+      - staging
       - 'shimmer-develop*'
     paths:
       - '**.rs'
